# KayakproRaceManagement

./: .gitignore  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  Main.qml  PrintManager.cpp  PrintManager.h  Racing.qml  SetBluetoothAddress.qml  SharedData.cpp  SharedData.h  gitignore  main.cpp  play.qml  resource.qrc
images/: app_icon.aps
